--- a/05-Object Oriented Programming/04-OOP Challenge.ipynb
+++ b/05-Object Oriented Programming/04-OOP Challenge.ipynb
@@ -23,35 +23,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Account:\n",
-    "    pass"
+    "class Account():\n",
+    "    \n",
+    "    def __init__(self,owner,balance):\n",
+    "        \n",
+    "        self.owner = owner\n",
+    "        self.balance = balance\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return (f'Account Owner: {self.owner}\\nAccount Balance: {self.balance}')\n",
+    "        \n",
+    "    \n",
+    "    def deposit(self,credit):\n",
+    "        self.balance += int(credit)\n",
+    "        \n",
+    "        print(f'Amount of {credit} has been deposited into the account of {self.owner}.')\n",
+    "        print(f'Current Balance : {self.balance}')\n",
+    "    \n",
+    "    def withdraw(self,debit):\n",
+    "        \n",
+    "        if debit < self.balance:\n",
+    "            self.balance = self.balance - debit\n",
+    "            print(f'Debited amount {debit}, Updated Balance {self.balance}')\n",
+    "        else:\n",
+    "            print(f'Insuffecient Balance. Please withdraw amount below {self.balance}')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 1. Instantiate the class\n",
-    "acct1 = Account('Jose',100)"
+    "acct1 = Account('Jose',200)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Account owner:   Jose\n",
-      "Account balance: $100\n"
+      "Account Owner: Jose\n",
+      "Account Balance: 200\n"
      ]
     }
    ],
@@ -62,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +93,7 @@
        "'Jose'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,16 +105,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "100"
+       "200"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,14 +126,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Deposit Accepted\n"
+      "Amount of 50 has been deposited into the account of Jose.\n",
+      "Current Balance : 250\n"
      ]
     }
    ],
@@ -122,14 +145,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Withdrawal Accepted\n"
+      "Debited amount 75, Updated Balance 175\n"
      ]
     }
    ],
@@ -139,14 +162,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Funds Unavailable!\n"
+      "Insuffecient Balance. Please withdraw amount below 175\n"
      ]
     }
    ],
@@ -179,7 +202,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
