--- a/08-Milestone Project - 2/03-Milestone Project 2 - Complete Walkthrough Solution.ipynb
+++ b/08-Milestone Project - 2/03-Milestone Project 2 - Complete Walkthrough Solution.ipynb
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -610,88 +610,74 @@
      "text": [
       "Welcome to BlackJack! Get as close to 21 as you can without going over!\n",
       "    Dealer hits until she reaches 17. Aces count as 1 or 11.\n",
-      "How many chips would you like to bet? 5\n",
+      "How many chips would you like to bet? 10\n",
       "\n",
       "Dealer's Hand:\n",
       " <card hidden>\n",
-      " Seven of Spades\n",
+      " Seven of Diamonds\n",
       "\n",
       "Player's Hand:\n",
-      " Queen of Spades\n",
-      " Nine of Hearts\n",
-      "\n",
-      "Dealer's Hand:\n",
-      " Ace of Clubs\n",
-      " Seven of Spades\n",
-      "Dealer's Hand = 18\n",
-      "\n",
-      "Player's Hand:\n",
-      " Queen of Spades\n",
-      " Nine of Hearts\n",
-      "Player's Hand = 19\n",
-      "Player wins!\n",
-      "\n",
-      "Player's winnings stand at 105\n",
-      "Would you like to play another hand? Enter 'y' or 'n' y\n",
-      "Welcome to BlackJack! Get as close to 21 as you can without going over!\n",
-      "    Dealer hits until she reaches 17. Aces count as 1 or 11.\n",
-      "How many chips would you like to bet? 5\n",
-      "\n",
-      "Dealer's Hand:\n",
-      " <card hidden>\n",
-      " Nine of Clubs\n",
-      "\n",
-      "Player's Hand:\n",
-      " Queen of Diamonds\n",
-      " Ace of Hearts\n",
+      " Ten of Spades\n",
+      " King of Diamonds\n",
       "Would you like to Hit or Stand? Enter 'h' or 's' s\n",
       "Player stands. Dealer is playing.\n",
       "\n",
       "Dealer's Hand:\n",
       " <card hidden>\n",
-      " Nine of Clubs\n",
+      " Seven of Diamonds\n",
       "\n",
       "Player's Hand:\n",
-      " Queen of Diamonds\n",
-      " Ace of Hearts\n",
+      " Ten of Spades\n",
+      " King of Diamonds\n",
       "\n",
       "Dealer's Hand:\n",
-      " Eight of Clubs\n",
-      " Nine of Clubs\n",
+      " Jack of Spades\n",
+      " Seven of Diamonds\n",
       "Dealer's Hand = 17\n",
       "\n",
       "Player's Hand:\n",
-      " Queen of Diamonds\n",
-      " Ace of Hearts\n",
-      "Player's Hand = 21\n",
+      " Ten of Spades\n",
+      " King of Diamonds\n",
+      "Player's Hand = 20\n",
       "Player wins!\n",
       "\n",
-      "Player's winnings stand at 105\n",
+      "Player's winnings stand at 110\n",
       "Would you like to play another hand? Enter 'y' or 'n' y\n",
       "Welcome to BlackJack! Get as close to 21 as you can without going over!\n",
       "    Dealer hits until she reaches 17. Aces count as 1 or 11.\n",
-      "How many chips would you like to bet? 65\n",
+      "How many chips would you like to bet? 20\n",
       "\n",
       "Dealer's Hand:\n",
       " <card hidden>\n",
-      " Four of Spades\n",
+      " King of Spades\n",
       "\n",
       "Player's Hand:\n",
-      " Queen of Clubs\n",
-      " Four of Diamonds\n",
+      " Queen of Hearts\n",
+      " Three of Hearts\n",
       "Would you like to Hit or Stand? Enter 'h' or 's' h\n",
       "\n",
       "Dealer's Hand:\n",
       " <card hidden>\n",
-      " Four of Spades\n",
+      " King of Spades\n",
       "\n",
       "Player's Hand:\n",
-      " Queen of Clubs\n",
-      " Four of Diamonds\n",
-      " Eight of Diamonds\n",
+      " Queen of Hearts\n",
+      " Three of Hearts\n",
+      " Two of Clubs\n",
+      "Would you like to Hit or Stand? Enter 'h' or 's' h\n",
+      "\n",
+      "Dealer's Hand:\n",
+      " <card hidden>\n",
+      " King of Spades\n",
+      "\n",
+      "Player's Hand:\n",
+      " Queen of Hearts\n",
+      " Three of Hearts\n",
+      " Two of Clubs\n",
+      " Ten of Spades\n",
       "Player busts!\n",
       "\n",
-      "Player's winnings stand at 35\n",
+      "Player's winnings stand at 80\n",
       "Would you like to play another hand? Enter 'y' or 'n' n\n",
       "Thanks for playing!\n"
      ]
@@ -799,7 +785,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
