--- a/11-Python Generators/02-Iterators and Generators Homework.ipynb
+++ b/11-Python Generators/02-Iterators and Generators Homework.ipynb
@@ -19,7 +19,8 @@
    "source": [
     "def gensquares(N):\n",
     "\n",
-    "    pass"
+    "    for i in range(N):\n",
+    "        yield i**2"
    ]
   },
   {
@@ -87,8 +88,8 @@
    "outputs": [],
    "source": [
     "def rand_num(low,high,n):\n",
-    "\n",
-    "    pass"
+    "    for i in range(n):\n",
+    "        yield random.randint(low,high)"
    ]
   },
   {
@@ -100,18 +101,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6\n",
       "1\n",
       "10\n",
+      "3\n",
       "5\n",
-      "8\n",
+      "6\n",
+      "5\n",
+      "3\n",
+      "5\n",
       "2\n",
-      "8\n",
-      "5\n",
-      "4\n",
-      "5\n",
       "1\n",
-      "4\n"
+      "3\n",
+      "7\n"
      ]
     }
    ],
@@ -131,13 +132,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'l'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "s = 'hello'\n",
     "\n",
-    "#code here"
+    "#code here\n",
+    "s_iter = iter(s)\n",
+    "\n",
+    "next(s_iter)\n",
+    "next(s_iter)\n",
+    "next(s_iter)\n"
    ]
   },
   {
@@ -159,25 +176,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4\n",
-      "5\n"
-     ]
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "my_list = [1,2,3,4,5]\n",
+    "my_list = [1,2,3,4,5,6,7,8,9]\n",
     "\n",
     "gencomp = (item for item in my_list if item > 3)\n",
     "\n",
-    "for item in gencomp:\n",
-    "    print(item)"
+    "# for item in gencomp:\n",
+    "#     next(gencomp)\n",
+    "\n",
+    "next(gencomp)"
    ]
   },
   {
@@ -206,7 +227,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
